[tool.poetry]
name = "autoguluon-sandbox"
version = "0.1.0"
description = ""
authors = ["pomcho555 <ono.fda03@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9"
autogluon = "^0.5.0"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
