[tool.poetry]
name = "autoguluon-sandbox"
version = "0.1.0"
description = ""
authors = ["pomcho555"]

[tool.poetry.dependencies]
python = "=3.7"
autogluon = "^0.5.0"
jupyterlab = "^3.4.3"
sagemaker = "^2.99.0"

[tool.poetry.dev-dependencies]
nb-black = "^1.0.7"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
